fixed spacing of overlay container

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -62,7 +62,7 @@ h1 {
 .overlay-container{
   position:absolute;
   top:90%;
-  left:37.5%;
+  left:50%;
   z-index:2;
 }
 .button-overlay{
